samples/_failures_safe/1761183193_c8f38e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_654f9aca.c: In function ‘parser_init’:
./samples/SAFE/__tmp_654f9aca.c:151:5: error: expected expression at end of input
  151 |     parser->has_error =
      |     ^~~~~~
./samples/SAFE/__tmp_654f9aca.c:151:5: error: expected declaration or statement at end of input
